[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/white-rabbit/whitrabt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TS1.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 26
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="Animation" id=11]
length = 0.03
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 350, 1 ), Vector2( 350, 40 ) ]
}

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[node name="TS1" type="Node2D"]
position = Vector2( 0, -32 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 336.0
margin_top = 80.0
margin_right = 686.0
margin_bottom = 380.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 352.0
margin_top = 120.0
margin_right = 672.0
margin_bottom = 370.0
custom_styles/read_only = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/selection_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_readonly = Color( 0.756863, 1, 0.65098, 1 )
text = "Yes, hi hi. Let's just get on with this. If you don't get something, it's ok. The job's not that hard to pick up.

Why do I have to do this...

Try entering something in the typing area below, newbie."
readonly = true
override_selected_font_color = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 256.0
margin_top = 504.0
margin_right = 756.0
margin_bottom = 554.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 272.0
margin_top = 514.0
margin_right = 742.0
margin_bottom = 544.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/selection_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
placeholder_text = "Enter something here..."
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="."]
margin_left = 256.0
margin_top = 400.0
margin_right = 756.0
margin_bottom = 500.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 272.0
margin_top = 408.0
margin_right = 742.0
margin_bottom = 493.0
custom_styles/read_only = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 9 )
custom_colors/selection_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_readonly = Color( 0.756863, 1, 0.65098, 1 )
text = "Log:"
readonly = true
override_selected_font_color = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
margin_left = 336.0
margin_top = 379.0
margin_right = 686.0
margin_bottom = 380.0
rect_scale = Vector2( 1, -1 )
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel3"]
anims/PullUp = SubResource( 11 )

[node name="NotifText" type="Label" parent="."]
visible = false
margin_left = 344.0
margin_top = 352.0
margin_right = 684.0
margin_bottom = 392.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You've got a message - click here"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 464.0
margin_top = 568.0
margin_right = 564.0
margin_bottom = 608.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
text = "Next"
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="gui_input" from="Panel3" to="." method="_on_Panel3_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
